refactor: Resolve Sonar Warnings  (#408)
replace assertEquals by assertThat().isEqualTo()
Applied OpenRewrite recipe org.openrewrite.java.testing.assertj.JUnitAssertEqualsToAssertThat
simplify Mockito matchers
Applied OpenRewrite recipe org.openrewrite.java.testing.mockito.SimplifyMockitoVerifyWhenGiven
This mainly removes obsolete Mockito.eq() calls
replace Stream.collect(Collectors.toList()) by toList()

related to #88