@@ -31,7 +31,6 @@ import org.operaton.bpm.engine.test.junit5.ProcessEngineExtension;
 import org.operaton.bpm.qa.largedata.util.EngineDataGenerator;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
@@ -63,7 +62,7 @@ class DeleteDeploymentCascadeTest {
       List<HistoricProcessInstance> processInstances = historyService.createHistoricProcessInstanceQuery()
           .processDefinitionKey(generator.getAutoCompleteProcessKey()).list();
       if (!processInstances.isEmpty()) {
-        List<String> processInstanceIds = processInstances.stream().map(HistoricProcessInstance::getId).collect(Collectors.toList());
+        List<String> processInstanceIds = processInstances.stream().map(HistoricProcessInstance::getId).toList();
         List<List<String>> partitions = CollectionUtil.partition(processInstanceIds, DbSqlSessionFactory.MAXIMUM_NUMBER_PARAMS);
         for (List<String> partition : partitions) {
           historyService.deleteHistoricProcessInstances(partition);
